# lessons

./: plan.txt  pyproject.toml
data/polygon_data/C:XAUUSD/30/: 2024-06-01_2025-01-01.csv
data/polygon_data/C:XAUUSD/60/: 2024-06-01_2025-01-01.csv
lesson_1/: load_data.py  main.ipynb
